Thu Nov 27 13:11:00 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (objspace_malloc_increase): enable lazy sweep on GC by malloc()
	  (malloc_increase) to make GC incrementally.

	  This change can increase memory consumption. Report us if you find
	  any problem.

Thu Nov 27 12:46:38 2014  Tanaka Akira  <akr@fsij.org>

	* time.c (time_s_mkutc): [DOC] Time.utc's 10 arguments form
	  doesn't examine wday, yday, isdst and tz.
	  (time_s_mktime): [DOC] Time.mktime's 10 arguments form
	  doesn't examine wday, yday and tz.
	  Suggested by naruse.

Thu Nov 27 11:45:33 2014  Eric Wong  <e@80x24.org>

	* iseq.c (iseq_data_to_ary): add missing GC guard

Thu Nov 27 10:51:59 2014  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h: add rb_thread_t::local_storage_recursive_hash
	  to speed up Thread#[:__recursive_key__] access.
	  [Bug #10511]

	* thread.c (threadptr_local_aref): add fast path for
	  :__recursive_data__.

	* thread.c (threadptr_recursive_hash, threadptr_recursive_hash_set):
	  add special accessor for recursive hash.

	* cont.c: store/restore local_storage_recursive_hash.

	* vm.c: init and mark local_storage_recursive_hash.

	* vm_trace.c (rb_threadptr_exec_event_hooks_orig): clear and restore
	  local_storage_recursive_hash directly.

Thu Nov 27 07:11:00 2014  Eric Wong  <e@80x24.org>

	* compile.c (iseq_calc_param_size): hoist out of iseq_set_arguments

Wed Nov 26 22:28:12 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_get_kwargs, rb_extract_keywords): export
	  keyword argument functions.

Wed Nov 26 21:18:40 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/inlinetest.rb: removed unused test helper.

Wed Nov 26 20:47:28 2014  Masaya Tarui  <tarui@ruby-lang.org>

	* ext/continuation/continuation.c (Init_continuation): obsolete callcc.
	  first step of [Feature #10548].

Wed Nov 26 19:57:54 2014  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_gc.rb (test_latest_gc_info): do test separately
	  to avoid mysterious behavior.
