@@ -1,3 +1,11 @@
+Thu Nov 27 15:29:06 2014  Brian Hempel  <plasticchicken@gmail.com>
+
+	* enum.c: New methods Enumerable#{frequencies,relative_frequencies}
+
+    Counts the number of times each item appears in an Enumerable.
+
+	* test/ruby/test_enum.rb: Tests for new methods.
+
 Thu Nov 27 13:11:00 2014  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c (objspace_malloc_increase): enable lazy sweep on GC by malloc()
